# ai_pams

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: README.md
config/app/: app.yaml
config/assets/: default.yaml
config/costs/: default.yaml
config/dca/: default.yaml
config/equity_scoring/: default.yaml
config/ips/: README.md  default.yaml
config/market/: symbols.yaml
config/market_regime/: default.yaml
config/risk/: default.yaml
config/rules/: README.md  default.yaml
config/stock_targets/: default.yaml
config/triggers/: default.yaml
deploy/: ci-deploy.sh  set-equity-api-keys.sh  set-kis-api-keys.sh  set-toss-api-keys.sh  setup.sh
docs/: architecture.md  deploy-oracle-cloud.md
docs/adr/: 0001-architecture-and-module-structure.md  0002-domain-models-stdlib-dataclass.md  0003-file-based-adapters-and-modes.md
examples/: benchmark.csv  fx.csv  market.yaml  prices.csv  transactions.csv
src/pams/: __init__.py
src/pams/ai_analysis/: __init__.py
src/pams/asset/: __init__.py
src/pams/audit/: __init__.py
src/pams/interfaces/: __init__.py  notifications.py  wiring.py
src/pams/ips/: __init__.py
src/pams/journal/: __init__.py
src/pams/market_data/: __init__.py
src/pams/performance/: __init__.py
src/pams/portfolio/: __init__.py
src/pams/rebalancing/: __init__.py
src/pams/reporting/: __init__.py
src/pams/risk/: __init__.py
src/pams/shared_kernel/: __init__.py
tests/unit/: test_project_structure.py
tests/unit/asset/: test_asset.py
(+260 files in other folders)
