[project]
name = "pams"
version = "0.1.0"
description = "Personal Asset Management System - IPS(투자헌장)를 엄격히 실행하는 자산운용 엔진"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pams"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
